--- a/file_managers/plex/config/media_config.yaml
+++ b/file_managers/plex/config/media_config.yaml
@@ -98,7 +98,7 @@ settings:
 # AWS Bedrock Configuration for AI Classification
 bedrock:
   region: "us-east-1"
-  model_id: "anthropic.claude-3-5-sonnet-20241022-v2:0"
+  model_id: "anthropic.claude-3-haiku-20240307-v1:0"
   max_tokens: 1000
   temperature: 0.1
   
@@ -116,6 +116,23 @@ bedrock:
     
     Consider the filename structure, keywords, and naming patterns.
     Respond with only the classification (MOVIE, TV, DOCUMENTARY, STANDUP, AUDIOBOOK, or OTHER).
+
+# External API Configuration
+external_apis:
+  # The Movie Database (TMDB) API
+  tmdb:
+    base_url: "https://api.themoviedb.org/3"
+    api_key: null  # Set via environment variable TMDB_API_KEY or pass to CLI
+    rate_limit_delay: 0.25  # Seconds between requests for free tier
+    timeout: 10
+    language: "en-US"
+  
+  # TV Database (TVDB) - Alternative/backup API
+  tvdb:
+    base_url: "https://api4.thetvdb.com/v4"
+    api_key: null  # Set via environment variable TVDB_API_KEY
+    rate_limit_delay: 1.0
+    timeout: 10
 
 # Backup and Safety Settings
 safety:
