--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ classifiers = [
 dependencies = [
     "PyYAML>=6.0",
     "boto3>=1.26.0",
+    "requests>=2.25.0",
+    "python-dotenv>=0.19.0",
 ]
 
 [project.optional-dependencies]
